[package]
name = "uid"
version = "0.1.4"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/uid"
repository = "https://github.com/d-e-s-o/uid.git"
readme = "README.md"
categories = ["no-std", "data-structures", "concurrency"]
keywords = ["id", "number", "type", "unique"]
description = """
A crate for the creation of unique IDs.
"""

[badges]
gitlab = { repository = "d-e-s-o/uid", branch = "master" }

[dependencies]
